--- a/Pictures.html
+++ b/Pictures.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="row">
-    <div style="height:240px;width:320px;overflow:scroll;">
+    <div style="display:block;margin-left:auto;margin-right:auto;height:240px;width:320px;overflow:scroll;">
         <img src="src/Pictures/Sparkle.png" alt="Sparkle!" style="width:100%" onclick="myFunction(this);">
         <img src="src/Pictures/Presus.jpg" alt="Before Sus" style="width:100%" onclick="myFunction(this);">
         <img src="src/Pictures/Shipping.jpg" alt="He's gonna ship himself" style="width:100%" onclick="myFunction(this);">
